<resources>
    <string name="app_name">FiMa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="profil_pribadi">Profil Pribadi</string>
    <string name="keluar">Keluar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="dengan_mendaftar_anda_menyetujui_persyaratan_ketentuan_dan_kebijakan_privasi_yang_berlaku">Dengan mendaftar, Anda menyetujui Persyaratan Ketentuan dan Kebijakan Privasi yang berlaku.</string>
    <string name="email">Email</string>
    <string name="usia">Usia</string>
    <string name="jane">Jane</string>
    <string name="profilmu">Profilmu</string>
    <string name="nama">Nama</string>
    <string name="tahun">Tahun</string>
    <string name="kg">Kg</string>
    <string name="cm">Cm</string>
    <string name="tb">TB</string>
    <string name="bb">BB</string>
    <string name="frekuensi_olahraga">Frekuensi Olahraga</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="tidak_pernah">Tidak Pernah</string>
    <string name="asma_cedera_pinggang">Asma, Cedera Pinggang</string>
    <string name="sedang">Sedang</string>
    <string name="aktif">Aktif</string>
    <string name="riwayat_penyakit_atau_cedera">Riwayat Penyakit atau Cedera</string>
    <string name="simpan">Simpan</string>
</resources>